# cruxwire-bench

./: .env.example  .gitignore  Dockerfile  README.md  SPEC_REVIEW.md  console_spec.md  docker-compose.yaml  pyproject.toml
bench/: __init__.py  __main__.py  config.py  corpus.py  engine.py  marks.py  scoring.py
bench/web/: app.py
bench/web/templates/: base.html  blocks.html  day.html  window.html
docs/: archive_writer.md
schema/: __init__.py  corpus_schema.py
scripts/: gen_synthetic_corpus.py
tests/: test_engine.py  test_scoring.py
