[project]
name = "cruxwire-bench"
version = "0.1.0"
description = "Clustering Bench: a standalone analysis console for debugging and tuning cruxwire's clustering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "numpy>=2.0",
    "duckdb>=1.1",
]

[project.optional-dependencies]
# GPU batch / re-embed jobs talk to Ollama over plain HTTP (stdlib), so no client
# library is required. `dev` is just the test + lint toolchain.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",          # FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench", "schema"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
